# WarehouseManagement

./: CMakeLists.txt  gitignore  main.cpp  resources.qrc
cpp/: basicproduct.cpp  basicproduct.h  employee.cpp  employee.h  expiredreport.cpp  expiredreport.h  expiredreportfactory.cpp  expiredreportfactory.h  iobserver.h  perishableproduct.cpp  perishableproduct.h  product.h  productdecorator.cpp  productdecorator.h  promotionalproduct.cpp  promotionalproduct.h  report.cpp  report.h  reportfactory.h  stockreport.cpp  stockreport.h  stockreportfactory.cpp  stockreportfactory.h  supplier.cpp  supplier.h  supply.cpp  supply.h  warehouse.cpp  warehouse.h  warehousemanager.cpp  warehousemanager.h
qml/: AddEmployeeForm.qml  DatePicker.qml  NotificationPanel.qml  ProductList.qml  ReportView.qml  SupplyList.qml  WarehouseList.qml  main.qml
